Fix priv_from_js_with_typecheck() for dynamic types

For the dynamic case, priv_from_js_with_typecheck() can't call
JS_InstanceOf(), since the dynamic class isn't an instance of the
static class. Instead do the checks in gjs_get_instance_private_dynamic(),
but don't raise exceptions.

http://bugzilla.gnome.org/show_bug.cgi?id=561203

svn path=/trunk/; revision=106